--- a/find_stationary_timeseries.ipynb
+++ b/find_stationary_timeseries.ipynb
@@ -303,6 +303,10 @@
    "execution_count": 9,
    "id": "e75dafbf-8a9a-4322-b802-1497b709e120",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
