changed lag order for full sample, add comments

--- a/data-descriptive.ipynb
+++ b/data-descriptive.ipynb
@@ -42,6 +42,8 @@
    "source": [
     "# Load in the previosuly prepared dataset\n",
     "df = pd.read_csv(\"prepared_data.csv\", parse_dates=[\"date\"])\n",
+    "\n",
+    "# Drop unnecessary columns and dummy columns for this sheet\n",
     "df = df.loc[:,:\"stringency_index\"].drop(columns=[\"hdax_open\",\"total_cases\"])\n",
     "\n",
     "#saving sample dates in variables\n",
@@ -177,6 +179,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Loading the column names in a list\n",
     "columns = list(df.drop(columns=[\"date\"]).columns)"
    ]
   },
@@ -234,7 +237,7 @@
     "\n",
     "axes[0].set_ylabel(\"Daily HDAX Close Price\")\n",
     "axes[1].set_ylabel(\"Daily  New  Covid-19  Cases\")\n",
-    "axes[2].set_ylabel(\"Daily Policy Stringency Index Level\")"
+    "axes[2].set_ylabel(\"Daily Policy Stringency Index Level\");"
    ]
   },
   {
@@ -259,10 +262,10 @@
     }
    ],
    "source": [
-    "#plotting the relevant datapoints\n",
+    "#plotting the relevant datapoints without higlighting the sub-samples\n",
     "fig, axes = plt.subplots(3, 1, tight_layout = True, figsize=(8,10), sharex=True, dpi=300)\n",
     "\n",
-    "#plotting and highlighting samples\n",
+    "#plotting\n",
     "for column, ax in zip(columns, axes.reshape(-1)):\n",
     "    sns.lineplot(x=df.date, y=column, data=df, ax=ax, color=\"black\")\n",
     "    ax.yaxis.set_label_coords(-0.1,0.5)\n",
@@ -522,11 +525,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Saving first wave sample\n",
     "df_1.set_index(\"date\", inplace=True, drop=True)\n",
     "df_1.to_csv(\"prepared_data_sample_1.csv\")\n",
+    "\n",
+    "# Saving second wave sample\n",
     "df_2.set_index(\"date\", inplace=True, drop=True)\n",
     "df_2.to_csv(\"prepared_data_sample_2.csv\")\n",
     "\n",
+    "# Saving full sample timeframe\n",
     "df_3 = df[(df[\"date\"]<=sample_2_end) & (df[\"date\"]>=sample_1_start)].copy(deep=True)\n",
     "df_3.to_csv(\"prepared_data_sample_full.csv\")"
    ]
